[tool.poetry]
name = "simple-pypi"
version = "0.1.0"
description = ""
authors = ["Joseph Lawson <joe@joekiller.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
docutils = "~=0.21.0, != 0.21.1"

[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.org/simple/"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
